--- a/admin/src/app/globals.css
+++ b/admin/src/app/globals.css
@@ -1,43 +1,31 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+
+body {
+  overflow-y: hidden;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-#layout{
+#layout {
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  align-items: center;
+  justify-content: center;
 }
-#body-header{
-  width: 100%;;
+#body-header {
+  width: 100%;
+  height: 900px;
 }
-#body{
+#body {
   overflow-y: scroll;
   background-color: black;
   width: 100%;
-  height: 100%;
+  height: 800px;
 }
 
-
 /* ! Nav Bar */
-#navbar{
+#navbar {
   width: 200px;
   height: 1000px;
   background-color: white;
@@ -46,21 +34,61 @@
   align-items: center;
   justify-content: start;
 }
-#navbar>a{
+#navbar > a:hover {
+  background-color: #f0f0f0;
+  color: #000000;
+}
+#navbar > a {
   font-size: 22px;
   font-weight: 700;
   border: 1px solid black;
   padding: 10px;
   width: 90%;
   margin: 10px 5%;
-  border-radius: 5px;
+  /* border-radius: 5px; */
 }
 /* ! Nav Bar END */
 /* ! Header*/
-#header{
-  height: 80px;
+#header {
+  height: 100px;
   width: 100%;
-  background-color: #ffffff;
-
+  background-color: white;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  padding: 0 20px;
+}
+#name-header {
+  font-size: 24px;
+  font-weight: 700;
+  color: #000000;
+}
+#icon-notification{
+  height: 50px;
+  width: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  margin-left: 30px;
+  position: relative;
+}
+#icon-notification:hover{
+  color: red;
+}
+#alert{
+  height: 20px;
+  width: 20px;
+  background-color: red;
+  border-radius: 50%;
+  position: absolute;
+  top: 4px;
+  right: 4px;
+  font-size: 13px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 800;  
 }
 /* ! Header END */
