--- a/admin/src/app/globals.css
+++ b/admin/src/app/globals.css
@@ -39,14 +39,21 @@ body {
   background-color: #f0f0f0;
   color: #000000;
 }
+#navbar > a >svg{
+  margin: 10px 0;
+}
 #navbar > a {
-  font-size: 22px;
-  font-weight: 700;
+  font-size: 20px;
+  font-weight: 600;
   border: 1px solid black;
   padding: 10px;
   width: 90%;
   margin: 10px 5%;
   /* border-radius: 5px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 /* ! Nav Bar END */
 /* ! Header*/
@@ -154,3 +161,34 @@ body {
 
 }
 /* ! END Home */
+/* ! Profile */
+#profile{
+  padding: 10px 20px;
+}
+#cards-skills{
+  width: 100%;
+  min-height: 60px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.item-skill>h5{
+  font-size: 20px;
+  font-weight: 700;
+}
+.item-skill>p{
+  font-size: 22px;
+  font-weight: 800;
+}
+.item-skill{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 60px;
+  width: 300px;
+  background-color: #cfcfcfc7;
+  margin: 10px;
+  color: black;
+}
+/* ! END Profiile */
